- [M] include/sandix/spinlock_smp.h
- [M] include/sandix/spinlock.h			[D] Generic spinlock APIs


Thu Jan 14 14:14:17 CST 2016
- [+] include/sandix/slab.h			[D] kmalloc kfree (empty)
- [+] include/sandix/err.h			[D] IS_ERR things
- [+] scripts/Lindent
- [M] arch/x86/include/asm/spinlock.h		[D] basic spinlock finished
- [M] drivers/tty/tty_ldisc.c
- [M] drivers/tty/n_tty.c			[D] new functions
- [M] include/sandix/tty.h			[D] new ldisc_ops: open, close


Fri Jan 15 11:14:19 CST 2016
- [+] include/asm-generic/uaccess.h		[D] copy_from_user() etc. functions
- [M] include/sandix/uaccess.h			 >  still empty. But they are needed by tty_io
- [M] arch/x86/include/asm/uaccess.h
- [M] drivers/tty_io.c
- [M] drivers/n_tty.c
- [M] arch/x86/Kconfig				[D] CONFIG_64BIT, default no
- [M] include/sandix/tty.h			[D] Split tty_driver/ldisc definitions into
- [+] include/sandix/tty_ldsic.h		 >  newly created files. It is cleaner speration
- [+] include/sandix/tty_driver.h		 >  between tty_struct/ldisc/driver.


Sat Jan 16 10:29:09 CST 2016
- [+] include/sandix/rwsem.h			[D] Used by tty now. Empty
- [M] include/sandix/tty.h			[D] re-organize tty_struct. new protecting lock and new fields
- [M] drivers/tty/tty_io.c			 >  tty_lock/unlock. alloc_tty_struct() some modifications
- [M] drivers/tty/tty_ldisc.h			 >  Some locking added
- [M] include/sandix/tty_driver.h		[D] new methods added into tty_operations
- [M] drivers/tty/vt/vt.c			 >  write_room, chars_in_buffer, etc. I start to understand why they are here
- [M] drivers/tty/n_tty.c			[D] OPOST processing


Mon Jan 18 11:05:18 CST 2016
- [+] arch/x86/pci/early.c			[D] early dump pci devices
- [+] arch/x86/kernel/traps.c			[D] traps_init()
- [M] arch/x86/kernel/e820.c			[D] Parse e820 table
- [M] arch/x86/kernel/setup.c			[D] early_arch_setup()
- [M] lib/vsnprintf.c				[D] Anyway, I reread the code, and change 'qualifiers' to 'modifiers',
-						 >  which might be more proper, since all manuals call this way.