@@ -5,3 +5,4 @@
 obj-y := ctype.o
 obj-y += hexdump.o
 obj-y += vsprintf.o
+obj-y += sort.o
